--- a/Guess My number/index.html
+++ b/Guess My number/index.html
@@ -20,9 +20,9 @@
         <button class="btn check">Check!</button>
       </section>
       <section class="right">
-        <p class="label-score">💯 Score: <span class="score"></span></p>
+        <p class="label-score">Score: <span class="score"></span></p>
         <p class="label-highscore">
-          🥇 Highscore: <span class="highscore">0</span>
+          Highscore: <span class="highscore">0</span>
         </p>
         <p class="message">Start guessing...</p>
       </section>
